# QEncyptStandAlone

./: README.md
rust-enc-ui/: Cargo.toml
rust-enc-ui/src/: lib.rs  main.rs
rust-enc-ui/tests/: encryption_roundtrip.rs
