[package]
name = "rust-enc-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
anyhow = "1.0.99"
argon2 = "0.5.3"
eframe = "0.32.0"
egui = "0.32.0"
getrandom = "0.3.3"
rfd = "0.15.4"
thiserror = "2.0.14"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.10"
